--- a/src/template.html
+++ b/src/template.html
@@ -27,7 +27,8 @@
         <div class="logos">
 
             <img src="img/icons8-facebook.svg" alt="">
-            <img src="img/icons8-instagram.svg" alt="">
+            <a href="https://www.instagram.com/lacasadela_abuela2024/" target="_blank"> <img src="img/icons8-instagram.svg" alt=""></a>
+           
             <img src="img/icons8-tiktok.svg" alt="">
         </div>
     </footer>
